fixed terminal border spacing

--- a/style.css
+++ b/style.css
@@ -108,10 +108,10 @@ body {
 /* Terminal Container Styles */
 .terminal-container {
   position: fixed;
-  top: 0;
-  right: 0;
-  width: 30%;
-  height: 58%;
+  top: 1rem;
+  right: 1rem;
+  width: calc(30% - 2rem); 
+  height: 56%;
   background-color: #0000009c;
   color: #0f0;
   padding: 1rem;
